--- a/React/mayx/src/App.css
+++ b/React/mayx/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.red{
+  background-color: red;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.green{
+  background-color: green;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.yellow{
+  background-color: yellow;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.blue{
+  background-color: blue;
 }
-
-.App-link {
-  color: #61dafb;
+.voilet{
+  background-color: violet;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pink{
+  background-color: pink;
 }
